src/qt/libqjsonobject.bf

extension CQt
{
	[LinkName("QJsonObject__iterator_new")]
	public static extern void* QJsonObject__iterator_new(QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_new2")]
	public static extern void* QJsonObject__iterator_new2();
	[LinkName("QJsonObject__iterator_new3")]
	public static extern void* QJsonObject__iterator_new3(void* obj, int32 index);
	[LinkName("QJsonObject__iterator_new4")]
	public static extern void* QJsonObject__iterator_new4(QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_OperatorAssign")]
	public static extern void QJsonObject__iterator_OperatorAssign(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_Key")]
	public static extern libqt_string QJsonObject__iterator_Key(void* c_this);
	[LinkName("QJsonObject__iterator_Value")]
	public static extern void QJsonObject__iterator_Value(void* c_this);
	[LinkName("QJsonObject__iterator_OperatorMultiply")]
	public static extern void QJsonObject__iterator_OperatorMultiply(void* c_this);
	[LinkName("QJsonObject__iterator_OperatorMinusGreater")]
	public static extern void* QJsonObject__iterator_OperatorMinusGreater(void* c_this);
	[LinkName("QJsonObject__iterator_OperatorMinusGreater2")]
	public static extern void* QJsonObject__iterator_OperatorMinusGreater2(void* c_this);
	[LinkName("QJsonObject__iterator_OperatorSubscript")]
	public static extern void QJsonObject__iterator_OperatorSubscript(void* c_this, int32 j);
	[LinkName("QJsonObject__iterator_OperatorEqual")]
	public static extern bool QJsonObject__iterator_OperatorEqual(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_OperatorNotEqual")]
	public static extern bool QJsonObject__iterator_OperatorNotEqual(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_OperatorLesser")]
	public static extern bool QJsonObject__iterator_OperatorLesser(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_OperatorLesserOrEqual")]
	public static extern bool QJsonObject__iterator_OperatorLesserOrEqual(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_OperatorGreater")]
	public static extern bool QJsonObject__iterator_OperatorGreater(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_OperatorGreaterOrEqual")]
	public static extern bool QJsonObject__iterator_OperatorGreaterOrEqual(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__iterator_OperatorPlusPlus")]
	public static extern QJsonObject__iterator* QJsonObject__iterator_OperatorPlusPlus(void* c_this);
	[LinkName("QJsonObject__iterator_OperatorPlusPlusWithInt")]
	public static extern QJsonObject__iterator QJsonObject__iterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QJsonObject__iterator_OperatorMinusMinus")]
	public static extern QJsonObject__iterator* QJsonObject__iterator_OperatorMinusMinus(void* c_this);
	[LinkName("QJsonObject__iterator_OperatorMinusMinusWithInt")]
	public static extern QJsonObject__iterator QJsonObject__iterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	[LinkName("QJsonObject__iterator_OperatorPlus")]
	public static extern QJsonObject__iterator QJsonObject__iterator_OperatorPlus(void* c_this, int32 j);
	[LinkName("QJsonObject__iterator_OperatorMinus")]
	public static extern QJsonObject__iterator QJsonObject__iterator_OperatorMinus(void* c_this, int32 j);
	[LinkName("QJsonObject__iterator_OperatorPlusAssign")]
	public static extern QJsonObject__iterator* QJsonObject__iterator_OperatorPlusAssign(void* c_this, int32 j);
	[LinkName("QJsonObject__iterator_OperatorMinusAssign")]
	public static extern QJsonObject__iterator* QJsonObject__iterator_OperatorMinusAssign(void* c_this, int32 j);
	[LinkName("QJsonObject__iterator_OperatorMinusWithQJsonObjectiterator")]
	public static extern int32 QJsonObject__iterator_OperatorMinusWithQJsonObjectiterator(void* c_this, QJsonObject__iterator j);
	[LinkName("QJsonObject__iterator_OperatorEqualWithOther")]
	public static extern bool QJsonObject__iterator_OperatorEqualWithOther(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__iterator_OperatorNotEqualWithOther")]
	public static extern bool QJsonObject__iterator_OperatorNotEqualWithOther(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__iterator_OperatorLesserWithOther")]
	public static extern bool QJsonObject__iterator_OperatorLesserWithOther(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__iterator_OperatorLesserOrEqualWithOther")]
	public static extern bool QJsonObject__iterator_OperatorLesserOrEqualWithOther(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__iterator_OperatorGreaterWithOther")]
	public static extern bool QJsonObject__iterator_OperatorGreaterWithOther(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__iterator_OperatorGreaterOrEqualWithOther")]
	public static extern bool QJsonObject__iterator_OperatorGreaterOrEqualWithOther(void* c_this, QJsonObject__const_iterator* other);
	/// Delete this object from C++ memory
	[LinkName("QJsonObject__iterator_Delete")]
	public static extern void QJsonObject__iterator_Delete(void* self);
}
public class QJsonObject__const_iterator
{
	protected void* nativePtr;
	
	public this(QJsonObject__const_iterator* other)
	{
		this.nativePtr = CQt.QJsonObject__const_iterator_new(other);
	}
	
	public ~this()
	{
		CQt.QJsonObject__const_iterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QJsonObject__const_iterator* other)
	{
		CQt.QJsonObject__const_iterator_OperatorAssign(this.nativePtr, other);
	}
	
	public libqt_string Key()
	{
		return CQt.QJsonObject__const_iterator_Key(this.nativePtr);
	}
	
	public void Value()
	{
		CQt.QJsonObject__const_iterator_Value(this.nativePtr);
	}
	
	public void OperatorMultiply()
	{
		CQt.QJsonObject__const_iterator_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QJsonObject__const_iterator_OperatorMinusGreater(this.nativePtr);
	}
	
	public void OperatorSubscript(int32 j)
	{
		CQt.QJsonObject__const_iterator_OperatorSubscript(this.nativePtr, j);
	}
	
	public bool OperatorEqual(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorEqual(this.nativePtr, other);
	}
	
	public bool OperatorNotEqual(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorNotEqual(this.nativePtr, other);
	}
	
	public bool OperatorLesser(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorLesser(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqual(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorLesserOrEqual(this.nativePtr, other);
	}
	
	public bool OperatorGreater(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorGreater(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqual(QJsonObject__const_iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorGreaterOrEqual(this.nativePtr, other);
	}
	
	public QJsonObject__const_iterator* OperatorPlusPlus()
	{
		return CQt.QJsonObject__const_iterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public QJsonObject__const_iterator OperatorPlusPlusWithInt(int32 param1)
	{
		return CQt.QJsonObject__const_iterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public QJsonObject__const_iterator* OperatorMinusMinus()
	{
		return CQt.QJsonObject__const_iterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public QJsonObject__const_iterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QJsonObject__const_iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public QJsonObject__const_iterator OperatorPlus(int32 j)
	{
		return CQt.QJsonObject__const_iterator_OperatorPlus(this.nativePtr, j);
	}
	
	public QJsonObject__const_iterator OperatorMinus(int32 j)
	{
		return CQt.QJsonObject__const_iterator_OperatorMinus(this.nativePtr, j);
	}
	
	public QJsonObject__const_iterator* OperatorPlusAssign(int32 j)
	{
		return CQt.QJsonObject__const_iterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public QJsonObject__const_iterator* OperatorMinusAssign(int32 j)
	{
		return CQt.QJsonObject__const_iterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQJsonObjectconstIterator(QJsonObject__const_iterator j)
	{
		return CQt.QJsonObject__const_iterator_OperatorMinusWithQJsonObjectconstIterator(this.nativePtr, j);
	}
	
	public bool OperatorEqualWithOther(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorNotEqualWithOther(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorNotEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorLesserWithOther(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorLesserWithOther(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqualWithOther(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorLesserOrEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterWithOther(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorGreaterWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QJsonObject__iterator* other)
	{
		return CQt.QJsonObject__const_iterator_OperatorGreaterOrEqualWithOther(this.nativePtr, other);
	}
	
}
